2011-04-19  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSScreen.m: Read -userSpaceScaleFactor from the GSScaleFactor
	user default.
	* Source/GSWindowDecorationView.m: Apply -[NSScreen userSpaceScaleFactor]
	in +frameRectForContentRect and +contentRectForFrameRect, as well as
	setting a scaled bounds size in -layout.

2011-04-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSWindow.m: Remove unnecessary FIXMEs related to
	user space scale factor
	* Source/NSAppliation.m: Correct app icon sizing which was
	mixing up window frame coordinates and user space coordinates
	* Source/NSCachedImageRep.m: Add NSUnscaledWindowMask to the
	window used internally

2011-04-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSScreen.m (-userSpaceScaleFactor):
	Temporarily fix the scale factor at 1.0 until the remaining parts
	of the high DPI patch are committed.

2011-04-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m (-compositeToPoint:fromRect:operation:fraction:):
	New simple implementation which calls
	-drawAtPoint:fromRect:operation:fraction:.
	Also respects the user space scale factor.
	* Source/NSImage.m (-guiDrawInRect:fromRect:operation:fraction):
	Remove a special case which called -compositeToPoint:..., which would
	cause an infinite loop when combined with the above change.

	Also avoid using -drawRepresentation:inRect: because -drawInRect:...
	is supposed to fill the destination rect regardless of the setting
	of -scalesWhenResized. This is a change borrowed from
	-nativeDrawInRect:...

2011-04-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenu.m (-_organizeMenu): Move some code around to avoid
	a compiler warning.

2011-04-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSViewController.m (-loadView): Retain the topLevelObjects.

2011-04-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSMenuView.m (-setWindowFrameForAttachingToRect:...):
	This method mixed user space and window base coordinates in some